2010-04-05  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #13864: Flags in non-used elements shouldn't be wrapped to next line (Thanks to Jerome Blum)

2010-03-30  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #13807: sorting CEs via list mode broken if translation 'diff' exists (Thanks to Jan Hacker)
	* Fixed bug: #12805: Interferences TV and feeditadvanced
	* Fixed bug: #13921: Browse and paste icons available if no edit rights (Thanks to Chris Müller)
	* Fixed bug: #13930: HTML-Path is wrong in case of mapping-errors

2010-03-27  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #13929: Unlinking referenced item triggers JS-error in IE8 
	* Fixed bug: #13831: "Browse for records" doesn't work in IE8, JavaScript Error 

2010-03-26  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #11550: "Create reference" button of a content element isn't visible for users without write access (Thanks to Stig Nørgaard Færch)

2010-03-25  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #13912: Handling of static DS is not compatible with DBAL/Oracle (Thanks to Xavier Perseguers)
	* Fixed bug: #13914: PHP Syntax error in mod2/index.php (Thanks to Sascha Egerer)

2010-03-11  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #13783: Content Element Preview Should Show CType Label (Thanks to Jeff Segars)
	* Fixed bug: #13052: New Content Element Wizard didn't load (Thanks to Jan Perdoch)

2010-03-09  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13776: Cannot unset HSC for input type Plain Input Field
	* Fixed bug: #13764: Changing eType in mapping module remains HSC=1

2010-03-07  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #11912: usergroup options for disabling the "paste as reference"-Function, when copying a FCE
	* Fixed bug: #13725: [pre-1.4.2] JavaScript errors when opening page module (in TYPO3 4.2)
	* Fixed bug: #13756: Clicking the configuration tabs in mapping module scrolls windows