@@ -55,6 +55,7 @@ $TCA['tx_templavoila_tmplobj'] = Array (
 	'ctrl' => Array (
 		'title' => 'LLL:EXT:templavoila/locallang_db.xml:tx_templavoila_tmplobj',
 		'label' => 'title',
+		'label_userFunc' => 'EXT:templavoila/classes/class.tx_templavoila_label.php:&tx_templavoila_label->getLabel',
 		'tstamp' => 'tstamp',
 		'crdate' => 'crdate',
 		'cruser_id' => 'cruser_id',
@@ -75,6 +76,7 @@ $TCA['tx_templavoila_datastructure'] = Array (
 	'ctrl' => Array (
 		'title' => 'LLL:EXT:templavoila/locallang_db.xml:tx_templavoila_datastructure',
 		'label' => 'title',
+		'label_userFunc' => 'EXT:templavoila/classes/class.tx_templavoila_label.php:&tx_templavoila_label->getLabel',
 		'tstamp' => 'tstamp',
 		'crdate' => 'crdate',
 		'cruser_id' => 'cruser_id',
