@@ -21,7 +21,7 @@ CREATE TABLE tx_templavoila_tmplobj (
 	fileref_mtime int(11) unsigned DEFAULT '0' NOT NULL,
 	deleted tinyint(4) unsigned DEFAULT '0' NOT NULL,
 	sorting int(11) unsigned DEFAULT '0' NOT NULL,
-	title varchar(100) DEFAULT '' NOT NULL,
+	title varchar(255) DEFAULT '' NOT NULL,
 	datastructure varchar(100) DEFAULT '' NOT NULL,
 	fileref tinytext,
 	templatemapping mediumblob,
@@ -62,7 +62,7 @@ CREATE TABLE tx_templavoila_datastructure (
 	cruser_id int(11) unsigned DEFAULT '0' NOT NULL,
 	deleted tinyint(4) unsigned DEFAULT '0' NOT NULL,
 	sorting int(11) unsigned DEFAULT '0' NOT NULL,
-	title varchar(100) DEFAULT '' NOT NULL,
+	title varchar(255) DEFAULT '' NOT NULL,
 	dataprot mediumtext,
 	scope tinyint(4) unsigned DEFAULT '0' NOT NULL,
 	previewicon tinytext,
