@@ -1,3 +1,7 @@
+2010-04-06 Michael Klapper <michael.klapper@aoemedia.de>
+
+	* Follow up to bugfix: #0012257: New Feature: localizable title fields 
+
 2010-04-05  Tolleiv Nietsch <nietsch@aoemedia.de> 
 
 	* Fixed bug: #13864: Flags in non-used elements shouldn't be wrapped to next line (Thanks to Jerome Blum)
